WIP - making golangci.yaml work with newer golangci-lint

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,40 +1,42 @@
-run:
-  timeout: 10m
-
-linters-settings:
-  errcheck:
-    # Workaround for https://github.com/golangci/golangci-lint/issues/4733
-    ignore: ""
-  golint:
-    min-confidence: 0
-  misspell:
-    locale: US
-  govet:
-    check-shadowing: false
-    settings:
-      printf:
-        funcs:
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Infof
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Warnf
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Errorf
-          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Fatalf
-    # TODO(kushthedude) remove the disabled checks
-    disable:
-      - composites
-      - copylocks
-
+version: "2"
 linters:
-  disable-all: true
+  default: none
+  enable:
+    - errcheck
+    - govet
+    - revive
+    - unused
+  settings:
+    govet:
+      disable:
+        - composites
+        - copylocks
+      settings:
+        printf:
+          funcs:
+            - (github.com/golangci/golangci-lint/pkg/logutils.Log).Infof
+            - (github.com/golangci/golangci-lint/pkg/logutils.Log).Warnf
+            - (github.com/golangci/golangci-lint/pkg/logutils.Log).Errorf
+            - (github.com/golangci/golangci-lint/pkg/logutils.Log).Fatalf
+    misspell:
+      locale: US
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
   enable:
     - gofmt
-    - revive
-    - govet
-    - errcheck
-    - unused
-    # TODO(kushthedude) fix after vendor is migrated to go modules
-    # - misspell
-
-service:
-  golangci-lint-version: 1.51.x # use the fixed version to not introduce new linters unexpectedly
-  prepare:
-    - echo "here I can run custom commands, but no preparation needed for this repo"
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
